log/build_2025-06-11_17-28-17/trab_stage_pkg/stderr.log
  File "/home/rafaella/ros2_ws/install/trab_stage_pkg/lib/python3.10/site-packages/trab_stage_pkg/robot.py", line 171
    self.get_logger().info(f"Estimated Pose: x:{} | y:{} | z:{}")
                                                                ^
SyntaxError: f-string: empty expression not allowed

